@@ -1,5 +1,11 @@
 2004-11-07  Bruno Haible  <bruno@clisp.org>
 
+	* m4/putenv.m4 (CL_PUTENV): Require AC_GNU_SOURCE. Needed for the
+	declaration of 'environ' on glibc systems.
+	* configure.in: Invoke AC_GNU_SOURCE.
+
+2004-11-07  Bruno Haible  <bruno@clisp.org>
+
 	* stream.d (unread_char): Fix GC-safety bug and gcc warning introduced
 	on 2004-07-28.
 
